fixed so overflow only hidden horizontally

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,8 +13,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #19191b;
   justify-content: center;
-  max-width: 100%;
-  overflow: hidden;
+  max-width: 100vw;
+  height: auto;
+  overflow-x: hidden;
 }
 
 h1,
